@@ -56,6 +56,7 @@
 	* Fixed a bug in tx_solr_Util::getConfigurationFromPageId() leading to wrong configuration to be returned when using an intialized TSFE to get the configuration
 	* Changed wording of the confirmation alert when emptying an index
 	* Fixed an issue in the Index Queue related to records created on system root (pid = 0)
+	* Fixed an issues in Record Monitor and Garbage Collection which did not fully cover moving pages
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
